edit json for gh pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "learningtodo",
+  "homepage": "https://kyleb12345.github.io/React-Grocery-List/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
